styles/style.css
/* GENERAL */

@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

html {
  scroll-behavior: smooth;
}

body {
  background-color: white;
  font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  transition: all 300ms ease;
}

h2 {
  padding-top: 0;
}

#about h2 {
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 200%;
}

#about p {
  font-size: 110%;
}

/* TRANSITIONS */
a,
.btn {
  transition: all 300ms ease;
}

/* NAV */
#nav-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  background-color: #fafbff;
  top: 0;
  width: 100%;
  height: 4rem;
  z-index: 5;
}

.nav-links {
  padding-right: 5rem;
  display: flex;
  gap: 1.5rem;
  list-style-type: none;
  font-size: 20px;
}

a {
  color: black;
  text-decoration: none;
  text-decoration-color: white;
}

a:hover {
  color: #596fae;
  text-decoration: underline;
  text-decoration-color: gainsboro;
}

.initial {
  padding-top: 4px;
  padding-left: 4.5rem;
  font-size: 34px;
  color: #596dae;
  font-weight: 600;
  font-family: 'Nunito';
}

.initial:hover {
  cursor: default;
}


/* SECTIONS */
section {
  margin: 0 10rem;
  padding: 7.5rem 0;
  box-sizing: border-box;
}

#home {
  padding-top: 15rem;
}

#about {
  margin: 0 20%;
}

/* PROFILES SECTION */
#home {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 4rem;
  text-align: center;
}

.home_text {
  width: 50%;
  align-self: center;
  text-align: center;

}

.profile_pic {
  height: 350px;
  width: 350px;
  border-radius: 5rem;
  margin: auto 0;
}

.profile p {
  font-weight: 600;
}

.section_p1 {
  font-size: clamp(1.4rem, 1.5vw, 1.5rem);
  margin-bottom: 1.5rem;
  align-items: center;
  text-align: center;
}

.title {
  font-size: 2.5rem;
  text-align: center;
}

.experience-title {
  margin-top: 0;
}

/* BUTTONS */
.btn-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.btn {
  font-weight: 600;
  font-size: 16px;
  font-family: 'Poppins';
  transition: all 300ms ease;
  padding: 0.9rem;
  width: 8rem;
  border-radius: 1.5rem;
}

.btn1 {
  border: whitesmoke 0.1rem solid;
}

.btn2 {
  border: gainsboro 0.1rem solid;
  background-color: #7181b4;
  color: whitesmoke;
}

.btn1:hover,
.btn2:hover {
  border: rgb(136, 136, 136) 0.1rem solid;
}

.logo {
  display: inline-block;
  margin: auto;
}

/* ABOUT */
#about {
  position: relative;
}

.about-containers {
  gap: 3rem;
  justify-content: center;
  margin-bottom: 2rem;
  margin-top: 2rem;
  flex-wrap: wrap;
}

.about-details-container {
  justify-content: space-between;
  flex-direction: column;
}

.about-containers,
.about-details-container {
  display: flex;
  flex-wrap: wrap;
}

/* PROJECTS SECTION */
#projects {
  position: relative;
  margin: 0;
  padding: 4rem 8rem;
}

.project-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  justify-content: center;
  margin-bottom: 2rem;
  margin-top: 2rem;
  gap: 2rem;
}
.proj-details{
  font-size: 14px;
  text-align: left;
  padding-left: 5%;
  margin-right: 3%;


}
.color-container {
  flex: 1 0 450px;
  background: rgb(250, 250, 250);
  padding-top: 1rem;
  padding-bottom: 0.1rem;
  border-radius: 1rem;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  text-align: center;
  border-color: rgb(163, 163, 163);
  box-sizing: border-box;
  max-width: 150%;
}

/* ANIMATIONS */
@keyframes subtle-wiggle {
  0% {
    transform: rotate(0deg);
  }

  25% {
    transform: rotate(1deg);
  }

  50% {
    transform: rotate(-1deg);
  }

  75% {
    transform: rotate(1deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

.color-container:hover {
  animation: subtle-wiggle 0.6s ease;
}

.project-img {
  border-radius: 1rem;
  width: 90%;
  height: auto;
  margin-top: 0.8%;

}

.project-title {
  text-align: left;
  padding-left: 5.2%;
  font-size: clamp(1.1rem, 1vw, 1.5rem);
  color: black;
  font-weight: 400;
  white-space: nowrap;
  font-size: 20px;
}

.project-btn {
  color: black;
  border-color: rgb(163, 163, 163);
}

.experience-section {
  padding: 1rem;
  border-radius: 2rem;
  background-color: #f1f2f7;
}

#skills {
  margin: 0 5rem;

}

.skills-details-container {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  justify-content: center;

}

.article-container {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  max-width: 86%;

}

article {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 1px solid #ddd;
  border-radius: 8px;
  background-color: #fefefe;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  width: 150px;
  height: auto;
  box-sizing: border-box;
  text-align: center;
}

article:hover {
  animation: subtle-wiggle 0.6s ease;
}

h3 {
  font-family: monospace;
}

.icon {
  padding-top: 25px;
  max-width: 100%;
}

.timeline-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  overflow-x: auto;
  padding: 40px 20px;
}

.timeline-item {
  display: flex;
  align-items: center;
  background: #e8e5f0;
  border-radius: 15px;
  padding: 15px 20px;
  margin-right: 20px;
  flex-shrink: 0;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  min-width: 200px;
  transition: transform 0.3s ease-in-out;
}

.timeline-item:hover {
  transform: scale(1.05);
}

.timeline-content img {
  width: 40px;
  height: 40px;
  margin-right: 15px;
  border-radius: 8%;
}

.timeline-content h3 {
  padding-top: 7px;
  margin: 0;
  font-size: 1.1em;
  color: #333;
}

.timeline-content p {
  margin: 5px 0 0;
  font-size: 0.9em;
  color: #666;
}

.timeline-date {
  font-family: monospace;
  font-size: 0.9em;
  font-weight: bold;
  margin-left: auto;
  color: #444;
}

.footer .initial {
  padding: 0.2rem;
  margin: 0rem;
}

.footer p {
  margin: 0rem;
  padding-bottom: 1.3rem;
}

.footer {
  position: relative;
  padding-bottom: 2rem;
  background-color: white;
  text-align: center;
}

.footer img {
  max-width: 24px;
}

.footer img:hover {
  animation: subtle-wiggle 0.6s ease;
}

.footer a {
  padding: 0rem 1.5rem;
}

#menu-button {
  color: black;
  position: absolute;
  top: 1px;
  z-index: 3;
  background-color: #fafbff;
  border: none;
  font-size: 45.5px;
  right: 3.3rem;
  position: absolute;
  padding: 0;
}

#menu-button:hover,
#close-menu:hover {
  color: #576fb1;
}

#close-menu {
  background-color: transparent;
  color: black;
  border: none;
  padding: 0;
  font-size: 230% !important;
  position: absolute;
  top: 9px;
  right: 3.7rem;
  z-index: 3;
}

.hidden {
  display: none;
}

/* NARROW VIEW */
@media only screen and (max-width: 700px) {

  #close-menu {
    font-size: 230% !important;
  }

  #nav-menu {
    flex-direction: column;
    align-items: flex-start;
    padding-left: 1.5rem;
  }

  .nav-links {
    position: fixed;
    top: 0;
    left: 0;
    background-color: #fafbff;
    flex-direction: column;
    width: 100%;
    text-align: center;
    transition: 0.3s;
    padding: 0;
  }

  .nav-links li {
    padding-bottom: 0.5rem;
  }

  .profile_container {
    padding-bottom: 2rem;
  }

  .initial {
    padding-top: 9px;
    padding-left: 0.5rem;
    font-weight: 600;
  }

  .profile_pic {
    width: 100%;
    max-width: 300px;
    min-width: 250px;
    height: 100%;
    max-height: 300px;
    min-width: 250px;
  }

  .home_text {
    width: 98%;
    padding-left: 1%;
    align-self: center;
    text-align: center;
  }



  .article-container {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: center;
    width: 50%;
  }

  article {
    min-width: 100%
  }

  section {
    margin: 0 3rem;
    padding: 4rem 0;
    box-sizing: border-box;
  }

  #home {
    display: block;
    text-align: center;
    padding-top: 6.5rem;
  }

  #about {
    margin: 0 10%;
  }


  .about-container {
    padding: 0;
    margin: 0;
  }

  nav ul {
    border-radius: 10%;
  }

  #last {
    padding-bottom: 22px;
  }

  .timeline-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 30px;
    padding-left: 10px;
    min-width: 100%;
  }

  .project-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    gap: 2rem;
}
/* NARROW VIEW */
@media only screen and (max-width: 400px) {

  #home, #about, #projects, #skills{
    font-size: 85%;
  }

  .color-container{
    max-width: 150%;
  }

}
}

